css/styles.css
body{
  font-family:sans-serif;
  font-size: 1em;
}
header{
  background-color:lightgrey
}
nav{
  background-color: lightblue;
}
main{
  background-color: yellow;
  font-size: 1.1em;
}
footer{
  background-color: rgb(163, 163, 163);
}
li{
  display: inline-block;
  width: 30%;
  font-family: sans-serif;
}
h1{
  text-align: center;
  font-family: 'Monotype Corsiva',serif;
  color:darkblue;
}
p{
  line-height: 1;
  font-family: Arial, Helvetica, sans-serif;
  font-weight: bold;
}

